Added Stringproperty for ViewName.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -87,5 +87,8 @@
  *                                                                         *
  **************************************************************************/
 
+#settingsBox{
+    -fx-padding: 50;
 
+}
 
