now even more stuff is in the css

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -34,6 +34,17 @@
     -fx-fit-to-width: true;
     -fx-content-display: left;
 }
+/***************************************************************************
+ *                                                                         *
+ *                             HomePresenter                                    *
+ *                                                                         *
+ **************************************************************************/
+#contentBox {
+    -fx-padding: 25;
+    -fx-spacing: 20;
+    -fx-alignment: center;
+}
+
 
 /***************************************************************************
  *                                                                         *
