--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -74,9 +74,14 @@
 
 #centerBox{
     -fx-padding: 10, 20, 10, 20;
+    -fx-spacing: 150;
 }
 #bottomBox{
     -fx-padding: 10 ,20 ,1 ,20;
+}
+
+#keyGeneratingBox{
+    -fx-spacing: 25;
 }
 
 /***************************************************************************
