KeyGeneratingBox is now middle centered

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -82,6 +82,8 @@
 
 #keyGeneratingBox{
     -fx-spacing: 25;
+    -fx-alignment: center;
+    -fx-padding: 25;
 }
 
 /***************************************************************************
