started with adminpanel on the bottom

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -98,6 +98,10 @@
     -fx-alignment: bottom-right;
 }
 
+.supporterBtn {
+
+}
+
 /***************************************************************************
  *                                                                         *
  *                             SupportView                                 *
