reloadKey looks even now

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -98,6 +98,10 @@
     -fx-alignment: bottom-right;
 }
 
+#reloadKeyBtn {
+    -fx-padding: 13;
+}
+
 /*#supporterAdminPane {
     -fx-alignment: bottom-center;
 
