looks kind of okay now

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -102,10 +102,11 @@
     -fx-padding: 13;
 }
 
-/*#supporterAdminPane {
-    -fx-alignment: bottom-center;
+.titled-pane > .title {
+    -fx-pref-height: 36.0;
+    -fx-font-size: 14pt;
 
-}*/
+}
 
 .supporterBtn {
 
