--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -45,6 +45,19 @@
     -fx-alignment: center;
 }
 
+/***************************************************************************
+ *                                                                         *
+ *                       RequestView & SupportView                         *
+ *                                                                         *
+ **************************************************************************/
+.descriptionLbl{
+    /*-fx-alignment: left;*/
+    -fx-wrap-text: true;
+}
+
+.titleLbl {
+    -fx-font-size: 25;
+}
 
 /***************************************************************************
  *                                                                         *
@@ -52,10 +65,7 @@
  *                                                                         *
  **************************************************************************/
 
-#descriptionLbl{
-    /*-fx-alignment: left;*/
-    -fx-wrap-text: true;
-}
+
 
 #keyGenerationLbl{
     /*-fx-alignment: left;*/
@@ -70,16 +80,12 @@
     -fx-font-size: 30pt;
 }
 
-#additionalDescriptionTxt{
-    -fx-wrap-text: true;
-}
-
 #centerBox{
     -fx-alignment: center;
     -fx-padding: 10, 20, 10, 20;
     -fx-spacing: 150;
-
 }
+
 #bottomBox{
     -fx-padding: 10 ,20 ,1 ,20;
 }
@@ -122,10 +128,6 @@
 
 #SupporterView {
     -fx-padding: 5, 25, 5, 25;
-}
-
-#EnterTokenLbl {
-    -fx-font-size: 25;
 }
 
 /***************************************************************************
