--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -84,6 +84,9 @@
     -fx-alignment: center;
     -fx-padding: 10, 20, 10, 20;
     -fx-spacing: 150;
+    -fx-background-image: url("../images/help_background.svg");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center top;
 }
 
 #bottomBox{
