--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -65,8 +65,6 @@
  *                                                                         *
  **************************************************************************/
 
-
-
 #keyGenerationLbl{
     /*-fx-alignment: left;*/
     -fx-font-family: Cantarell;
@@ -80,7 +78,7 @@
     -fx-font-size: 30pt;
 }
 
-#centerBox{
+#centerBoxRequest{
     -fx-alignment: center;
     -fx-padding: 10, 20, 10, 20;
     -fx-spacing: 150;
@@ -131,6 +129,12 @@
 
 #SupporterView {
     -fx-padding: 5, 25, 5, 25;
+}
+
+#centerBoxSupport {
+    -fx-background-image: url("../images/supporter_background.svg");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center top;
 }
 
 /***************************************************************************
