reverted changes and added #centerBoxSupport

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -130,6 +130,10 @@
     -fx-padding: 5, 25, 5, 25;
 }
 
+#centerBoxSupport {
+
+}
+
 /***************************************************************************
  *                                                                         *
  *                             Settings Popover                            *
