--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -83,6 +83,7 @@
     -fx-padding: 10, 20, 10, 20;
     -fx-spacing: 150;
     -fx-background-image: url("../images/help_background.svg");
+    -fx-background-size: 70%;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center top;
 }
