--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -51,8 +51,7 @@
  *                                                                         *
  **************************************************************************/
 .descriptionLbl{
-    /*-fx-alignment: left;*/ /*FIXME: Throws IllegalArgumentException*/
-    -fx-text-alignment: left; /* doesn't change anything as well */
+    -fx-alignment: center-left; /*FIXME: Throws IllegalArgumentException - sometimes*/
     -fx-wrap-text: true;
 }
 
@@ -97,8 +96,8 @@
     -fx-padding: 25;
 }
 
-#descriptionBox {       /* also used for SupportView */
-    /*-fx-alignment: center;*/
+.descriptionBox {       /* also used for SupportView */
+    -fx-alignment: center;
     -fx-spacing: 50;
     -fx-padding: 25;
 }
@@ -133,14 +132,26 @@
 
 #centerBoxSupport {
     /*-fx-alignment: center;*/ /*FIXME: is doing nothing*/
+    -fx-alignment: center;
+    -fx-padding: 10, 20, 10, 20;
+    -fx-spacing: 150;
 }
 
 #connectBtn {
     -fx-alignment: bottom-right;
+    /*-fx-font-size: 30;*/
 }
 
 #keyValidationBox {
+    -fx-alignment: center;
+    -fx-spacing: 25;
+    -fx-padding: 25;
+}
 
+#keyFld {
+    -fx-background-color: #e2e2e2;
+    -fx-font-family: Monospaced;
+    -fx-font-size: 30pt;
 }
 
 
