added todo and changed font size of keyfld to 20, now it says "generating", which is acceptable I think

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -77,7 +77,7 @@
 #generatedKeyFld{
     -fx-background-color: #e2e2e2;
     -fx-font-family: Monospaced;
-    -fx-font-size: 30pt;
+    -fx-font-size: 20pt; /* TODO: change this back to 30 or make textfield larger so the whole prompttext fits */
 }
 
 #centerBox{
