trying to find a solution for a support list

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -143,6 +143,12 @@
     -fx-font-size: 30pt;
 }
 
+.supporterBtn {
+    -fx-font-size: 18pt;
+    -fx-fit-to-width: true;
+    -fx-content-display: top;
+}
+
 
 /***************************************************************************
  *                                                                         *
