see that buttons are dynamic... next: Make it dynamic

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -147,6 +147,8 @@
     -fx-font-size: 18pt;
     -fx-fit-to-width: true;
     -fx-content-display: top;
+    -fx-border-width: 3;
+    -fx-padding: 5;
 }
 
 
