make status adaptable

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -88,11 +88,11 @@
     -fx-alignment: center;
 }
 
-.statusBox:valid{
+.statusBoxValid{
     -fx-background-color: rgb(92, 184, 92);
 }
 
-.statusBox:invalid{
+.statusBoxInvalid{
     -fx-background-color: rgb(217, 83, 79);
 }
 
