--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -66,7 +66,7 @@
  **************************************************************************/
 #contentBox {
     /*-fx-padding: 25;*/
-    /*-fx-spacing: 20;*/
+    -fx-spacing: 20;
     /*-fx-alignment: center;*/
 }
 
