changed implementation to titledpane, but a bit differently....

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -107,6 +107,10 @@
     /*-fx-padding: 25;*/
 }
 
+.boxLabels {
+
+}
+
 /***************************************************************************
  *                                                                         *
  *                             RequestView                                 *
