--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -263,3 +263,9 @@
 .toggles:selected .thumb-area {
     -fx-background-color: #A7A7A7;
 }
+
+/***************************************************************************
+ *                                                                         *
+ *                    SupporterAttributesDialog                            *
+ *                                                                         *
+ **************************************************************************/
