fixed headerview and homeview styling

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -59,6 +59,14 @@
 .SmallFont{
      -fx-font-size: 18pt;
 }
+
+.homeButtonImages {
+}
+
+.homeButtonBoxes {
+    -fx-spacing: 20px;
+}
+
 /***************************************************************************
  *                                                                         *
  *                             HomePresenter                                    *
