--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -250,10 +250,21 @@
     -fx-background-position: center top;
 }
 
-#connectBtn {
+#connectBtn, #startServiceBtn{
+    -fx-padding: 30 80 30 80;
     -fx-alignment: center;
     -fx-font-size: 30;
+    -fx-background-radius: 4px;
+    -fx-border-radius:4px;
+    -fx-border-color:#A7A7A7;
+    -fx-background-color: #EAEAEA;
 }
+
+#connectBtn:hover, #startServiceBtn:hover{
+    -fx-background-color: #f7f7f7;
+    -fx-cursor: hand;
+}
+
 
 #keyValidationBox {
     /*-fx-alignment: center;*/
@@ -289,6 +300,9 @@
     -fx-background-color: lightgrey; /* Green */
     -fx-border-color: lightgrey;
 }
+
+
+
 
 /***************************************************************************
  *                                                                         *
