--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -310,7 +310,7 @@
  **************************************************************************/
 
 .settingsBoxes{
-    -fx-padding: 10;
+    -fx-padding: 30;
 }
 
 #settingsBox{
@@ -347,6 +347,7 @@
     -fx-font-size: 150%;
 }
 
+
 .toggles {
     -fx-alignment: baseline-center;
 }
@@ -371,12 +372,21 @@
 
 }
 
-#requestViewOnlyLbl{
+.toggles .thumb:hover {
+    -fx-cursor: hand;
+
+}
+
+.toggles:hover{
+    -fx-cursor: hand;
+}
+
+.settingsLabels{
     -fx-font-size: 18pt;
 }
 
 .expertSettingsBtn{
-    -fx-padding: 10 20 10 20;
+    -fx-padding: 20 30 20 30;
     -fx-alignment: center;
     -fx-font-size: 18pt;
     -fx-background-radius: 4px;
