--- a/resources/css/stylesLow.css
+++ b/resources/css/stylesLow.css
@@ -78,7 +78,7 @@
     -fx-wrap-text: true;
     -fx-alignment: center-left;
     -fx-padding: 20;
-    -fx-font-style: bold;
+    -fx-font-weight: bold;
 }
 
 .statusBox{
@@ -136,7 +136,7 @@
     -fx-background-size: 70%;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center top;
-]
+}
 
 #reloadKeyBtn {
     /*-fx-padding: 13;*/
